Fixed build toolbar items alignment.

--- a/src/assets/css/toolbar.css
+++ b/src/assets/css/toolbar.css
@@ -26,7 +26,6 @@
 }
 
 .toolbar-center {
-  flex-direction: column;
   margin-left: auto;
   margin-right: auto;
 }
@@ -52,4 +51,5 @@
 .toolbar-part {
   align-items: center;
   display: flex;
+  flex-direction: row;
 }
